[gd_scene load_steps=16 format=3 uid="uid://ctlx3qylqphyo"]

[ext_resource type="Script" path="res://Scripts/BlockSpawner.gd" id="1_b4ypx"]
[ext_resource type="PackedScene" uid="uid://c4safo4pwme48" path="res://Prefabs/Blocks/1x4-Piece.tscn" id="2_njfkm"]
[ext_resource type="PackedScene" uid="uid://bdyf8npx3i7xk" path="res://Prefabs/Blocks/2x2-Piece.tscn" id="3_y13gq"]
[ext_resource type="PackedScene" uid="uid://caudmtkjwca1i" path="res://Prefabs/Blocks/L-Piece-Mirrored.tscn" id="4_bg7ku"]
[ext_resource type="PackedScene" uid="uid://b1lrc4bb14deo" path="res://Prefabs/Blocks/L-Piece.tscn" id="5_bix6h"]
[ext_resource type="PackedScene" uid="uid://c7c8vai4olkeh" path="res://Prefabs/Blocks/T-Piece.tscn" id="6_6443k"]
[ext_resource type="PackedScene" uid="uid://b60t64b6u40dy" path="res://Prefabs/Blocks/Z-Piece-Mirrored.tscn" id="7_f67qo"]
[ext_resource type="PackedScene" uid="uid://cqrk66u8spi3" path="res://Prefabs/Blocks/Z-Piece.tscn" id="8_c41xu"]
[ext_resource type="Script" path="res://Scripts/SpawnObject.gd" id="9_gkg5t"]
[ext_resource type="PackedScene" uid="uid://r1kjk04fwuou" path="res://Prefabs/Spawn On Blocks/Hold.tscn" id="10_a5syx"]
[ext_resource type="PackedScene" uid="uid://dhrgrpwwax6i8" path="res://Prefabs/Spawn On Blocks/Spikes.tscn" id="11_uu4ty"]
[ext_resource type="PackedScene" uid="uid://bkatak76uuoli" path="res://Prefabs/Spawn On Blocks/Campfire.tscn" id="12_oia60"]

[sub_resource type="Resource" id="Resource_xvcvp"]
script = ExtResource("9_gkg5t")
spawn_prefab = ExtResource("10_a5syx")
spawn_count = 0

[sub_resource type="Resource" id="Resource_rl80j"]
script = ExtResource("9_gkg5t")
spawn_prefab = ExtResource("11_uu4ty")
spawn_count = 0

[sub_resource type="Resource" id="Resource_hwvb2"]
script = ExtResource("9_gkg5t")
spawn_prefab = ExtResource("12_oia60")
spawn_count = 0

[node name="BlockSpawner" type="Marker2D"]
position = Vector2(-59.775, -197.903)
script = ExtResource("1_b4ypx")
block_prefabs = Array[PackedScene]([ExtResource("2_njfkm"), ExtResource("3_y13gq"), ExtResource("4_bg7ku"), ExtResource("5_bix6h"), ExtResource("6_6443k"), ExtResource("7_f67qo"), ExtResource("8_c41xu")])
spawn_objects = Array[ExtResource("9_gkg5t")]([SubResource("Resource_xvcvp"), SubResource("Resource_rl80j"), SubResource("Resource_hwvb2")])

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_spawn_timer_finished"]
